#8 Bugfix. z-index is automatically adjusted

--- a/assets/css/overview.css
+++ b/assets/css/overview.css
@@ -79,6 +79,7 @@ body{
      position: relative;
      padding-left: 11vw;
      padding-bottom: 2vh;
+     z-index: 60;
 }
  .filter nav ul {
      list-style: none;
@@ -325,7 +326,7 @@ background-repeat: no-repeat;
 background-size: 100% 100%;
 background-position: bottom;
 opacity: 1;
-z-index: -10;
+z-index: 50;
 }
 
 .zusatz_button_container{
@@ -360,7 +361,7 @@ position: relative;
   padding-top: 10vh;
   padding-bottom: 12vh;
   float: left;
-  z-index: 60;
+  z-index: 71;
 }
 
 #klickable{
@@ -374,5 +375,3 @@ position: relative;
   border-color: transparent;
   font-size: 1vw;
 }
-
- 
